# hzelmaim

./: .env  .env.example  .gitignore  docker-compose.yml  package.json  turbo.json
backend/: Cargo.toml  Dockerfile
backend/db/: schema.sql
backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_user_profile_fields.sql  20240102000000_oauth_apps.sql  20240103000000_add_container_resource_limits.sql  20240103000000_webhooks.sql  20240104000000_add_programs.sql  20240104000000_private_networks.sql  20240105000000_add_program_invitations.sql  20240105000000_container_invitations.sql  20240106000000_add_program_permissions.sql  20240106000000_container_permissions.sql  20240107000000_container_invitations_permissions.sql  20240108000000_add_api_tokens.sql
backend/src/: app_state.rs  config.rs  lib.rs  main.rs  ssh_ca.rs
backend/src/api/: mod.rs  openapi.rs  response.rs  router.rs
backend/src/auth/: context.rs  csrf.rs  jwt.rs  mod.rs  oidc.rs  resolver.rs  session.rs  store.rs
backend/src/db/: api_token_repo.rs  audit_repo.rs  command_repo.rs  container_repo.rs  mod.rs  network_repo.rs  oauth_repo.rs  pg_auth_store.rs  program_repo.rs  user_repo.rs  webhook_repo.rs
backend/src/jobs/: command_queue.rs  mod.rs  state_sync.rs  terminal.rs
backend/src/models/: api_token.rs  audit.rs  command.rs  container.rs  mod.rs  network.rs  oauth.rs  program.rs  session.rs  user.rs  webhook.rs
backend/src/proxmox/: client.rs  http_client.rs  mod.rs  types.rs
backend/src/services/: audit_service.rs  command_service.rs  container_service.rs  mod.rs  (+4 more)
(+143 files in other folders)
